# assertion-da

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  flake.nix
.github/workflows/: docker-ghcr-cd.yml  release.yml  rust-ci.yml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: config.rs
crates/server/src/api/: accept.rs  mod.rs  process_request.rs
examples/: test_http_client.rs
